--- a/mircroservice-commande.properties
+++ b/mircroservice-commande.properties
@@ -20,4 +20,7 @@ spring.datasource.sql-script-encoding=UTF8
 mes-config-ms.commandeslast=8
  
 #Configuration Actuator
-management.endpoints.web.exposure.include=*
+management.endpoints.web.expose=info, health, refresh
+ 
+#Eureka :indique l'URL d'Eureka à laquelle il faut s'enregistrer
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
